--- a/template/index.html
+++ b/template/index.html
@@ -139,7 +139,7 @@
           </div>
         </div>
       </main>
-      <footer class="row center">All right reserved</footer>
+      <footer class="row center">All rights reserved</footer>
     </div>
   </body>
 </html>
